# astroVizualizer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: setup.sh
src/astroviz/: __init__.py
src/astroviz/api/: main.py
src/astroviz/api/routes/: asteroids.py  visualization.py
src/astroviz/data/: __init__.py  nasa_client.py  processor.py
src/astroviz/models/: asteroid.py
src/frontend/: index.html
src/frontend/src/: App.css  App.tsx  index.css
src/frontend/src/components/: AsteroidScene.tsx
tests/: test_models.py  test_nasa_client.py
